@@ -28,39 +28,44 @@ class RecipeServiceTest {
     }
 
     @Test
-    void createTest() {
+    void create() {
         when(materialService.isAllExist(anyList())).thenReturn(true);
+
         String createdRecipeId = recipeService.create("name", Collections.emptyList());
-        verify(recipeRepository).save(any(Recipe.class));
+
+        verify(materialService).isAllExist(anyList());
+        verify(recipeRepository).create(any(Recipe.class));
     }
 
     @Test
-    void materialMatchedTest() {
-        when(materialService.isAllExist(anyList())).thenReturn(true);
-
-        List<Ingredient> ingredients = List.of(
-                new Ingredient("m1", 1.0),
-                new Ingredient("m2", 1.0)
-        );
-
-        String createdRecipeId = recipeService.create("name", ingredients);
-
-        verify(materialService).isAllExist(List.of("m1", "m2"));
-    }
-
-    @Test
-    void materialMismatchTest() {
+    void createWithNotExistMaterial() {
         when(materialService.isAllExist(anyList())).thenReturn(false);
 
-        List<Ingredient> ingredients = List.of(
-                new Ingredient("m1", 1.0),
-                new Ingredient("m2", 1.0)
-        );
-
         assertThrows(InvalidRecipeException.class, ()->{
-            String createdRecipeId = recipeService.create("name", ingredients);
+            recipeService.create("name", Collections.emptyList());
         });
 
-        verify(materialService).isAllExist(List.of("m1", "m2"));
+        verify(materialService).isAllExist(anyList());
+    }
+
+    @Test
+    void update() {
+        when(materialService.isAllExist(anyList())).thenReturn(true);
+
+        recipeService.update("material1", "name", Collections.emptyList());
+
+        verify(materialService).isAllExist(anyList());
+        verify(recipeRepository).update(any(Recipe.class));
+    }
+
+    @Test
+    void updateWithNotExistMaterial() {
+        when(materialService.isAllExist(anyList())).thenReturn(false);
+
+        assertThrows(InvalidRecipeException.class, ()->{
+            recipeService.update("material1", "name", Collections.emptyList());
+        });
+
+        verify(materialService).isAllExist(anyList());
     }
 }
